# ml_ops_1

./: README.md  pyproject.toml
src/features/: fe_trainmodel.py  feature_engineering_1.py  feature_engineering_2.py
src/models/: predict_fe1.py  predict_fe2.py  predict_trainmodel.py  train_model_fe1.py  train_model_fe2.py  train_trainmodel.py
